added Delegates, Events and Lambdas

--- a/Generics/Generics.csproj
+++ b/Generics/Generics.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Apple.cs" />
+    <Compile Include="Items\Apple.cs" />
     <Compile Include="Box.cs" />
     <Compile Include="Cart.cs" />
     <Compile Include="Countable\Counter.cs" />
